--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="now_refresh">now_refresh</string>
     <string name="no_more">没有更多数据</string>
     <string name="load_more">加载更多数据</string>
-    <string name="user_name">User name</string>
-    <string name="nickname">NickName</string>
-    <string name="password">Password</string>
-    <string name="confirmpassword">Confirm Password</string>
-    <string name="register">Register</string>
+    <string name="user_name">用户名</string>
+    <string name="nickname">昵称</string>
+    <string name="password">密码</string>
+    <string name="confirmpassword">确认密码</string>
+    <string name="register">免费注册</string>
     <string name="user_name_connot_be_empty">user name connot be empty</string>
     <string name="illegal_user_name">illegal user name</string>
     <string name="nick_name_connot_be_empty">nick name connot be empty</string>
@@ -20,7 +20,7 @@
     <string name="register_fail">register fail</string>
     <string name="register_success">register success</string>
     <string name="register_fail_exists">user name exists</string>
-    <string name="login">Login</string>
+    <string name="login">登录</string>
     <string name="login_fail">login fail</string>
     <string name="logining">logining</string>
     <string name="login_fail_unknow_user">login fail,unknow username</string>
